Props, State and Events

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "webpack-dev-server": "^1.15.0"
   },
   "dependencies": {
+    "purecss": "^0.6.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   }
